2006-11-12  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/map.cpp, src/map.h: Made pathfinding algorithm cope better with
	beings blocking the road. This is done by allowing walking over other
	beings, but at an additional cost so that it is preferable to walk
	around them.

2006-11-09  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* src/main.cpp, src/net/network.cpp, src/net/network.h,
	The Mana World.dev, tmw.cbp: Fixed a conflict with Windows headers and
	updated project files.

2006-11-05  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/gui/trade.cpp: Fixed money field to no longer hide below the
	bottom of the window.
	* src/CMakeLists.txt: Added shoplistbox.h/cpp files.
	* src/gui/updatewindow.cpp: Fixed percentage indicator of update
	window.
	* src/main.cpp, src/net/beinghandler.cpp, src/net/skillhandler.cpp,
	src/net/network.cpp: Changed some printf statements to log statements.

2006-11-05  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* data/graphics/images/login_wallpaper.png: Reverted to standard
	wallpaper.
	* src/resources/resourcemanager.cpp: More useful logging about
	resources that are being loaded (including source).

2006-11-05  Yohann Ferreira  <bertram@cegetel.net>

	* src/Makefile.am, src/gui/buy.cpp, src/gui/buy.h, src/gui/shop.h,
	src/gui/shop.cpp, src/gui/sell.cpp, src/gui/shoplistbox.h,
	src/gui/shoplistbox.cpp: Added pictures to items in buy dialogs.
	Also too expensive items are highlighted in gray and can't be
	selected.
	* src/gui/shop.cpp, src/gui/shop.h, src/gui.sell.h, src/gui/sell.cpp,
	src/net/buysellhandler.cpp, src/gui/shoplistbox.h,
	src/gui/shoplistbox.cpp: Added item's pictures in sell dialogs, and
	precisions about the total money in it.
	* src/gui/shop.h, src/gui/shop.cpp, src/gui/sell.cpp: Fixes to Sell
	dialog.
	* src/gui/sell.cpp: Fixes the money value after selling something.

2006-11-05  Björn Steinbrink  <B.Steinbrink@gmx.de>

	* data/graphics/sprites/Makefile.am: Use tabs instead of spaces as
	required by automake (AFAIK).