@@ -4,6 +4,8 @@
 	beings blocking the road. This is done by allowing walking over other
 	beings, but at an additional cost so that it is preferable to walk
 	around them.
+	* src/game.cpp: Worked around a Guichan exception thrown for mice with
+	many buttons (patch by Roel van Dijk).
 
 2006-11-09  Eugenio Favalli  <elvenprogrammer@gmail.com>
 
